# truthcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
tests/: test_exa_backend.py  test_skeleton.py
truthcheck/: __init__.py  cache.py  splitter.py  types.py  verifier.py  web_fact_checker.py
truthcheck/backends/: __init__.py  base.py  brave.py  exa.py
